# MicapAiLabs

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY_AUDIT.md  STABILITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ompa-ci.yml  ompa-docs.yml  ompa-publish.yml
api/cli/: index.html
api/kg/: index.html
api/ompa/: index.html
api/palace/: index.html
api/vault/: index.html
changelog/: index.html
docs/: changelog.md  index.md  quickstart.md
docs/api/: cli.md  kg.md  ompa.md  vault.md
docs/guides/: dual-vault.md  message-types.md
examples/mcp_desktop/: README.md
examples/multi_agent/: swarm_memory.py
guides/dual-vault/: index.html
guides/hooks/: index.html
guides/mcp/: index.html
guides/message-types/: index.html
ompa/: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  cli.py  config.py  core.py  hooks.py  mcp_server.py  migration.py  mkdocs.yml  pyproject.toml  semantic.py  vault.py
ompa/.github/ISSUE_TEMPLATE/: feature_request.md
ompa/.github/workflows/: ci.yml  docs.yml
ompa/adapters/: __init__.py  faiss.py  langchain.py  llamaindex.py  nim.py  openai_agents.py
ompa/benchmarks/: longmemeval.py
ompa/docs/api/: palace.md
ompa/docs/guides/: hooks.md  mcp.md
ompa/examples/langchain_agent/: ompa_memory.py
ompa/ompa/: __init__.py  async_api.py  classifier.py  cli.py  config.py  core.py  hooks.py  knowledge_graph.py  mcp_server.py  migration.py  palace.py  semantic.py  token_counter.py  vault.py
ompa/ompa/adapters/: faiss.py  langchain.py  llamaindex.py  nim.py  openai_agents.py
ompa/ompa/sync/: __init__.py  base.py  git.py  rsync.py  s3.py
ompa/sync/: base.py
ompa/tests/: conftest.py  test_ompa.py  test_properties.py
quickstart/: index.html
search/: search_index.json
tests/: test_ompa.py  test_properties.py
