[project]
name = "ompa"
version = "1.0.0"
description = "Universal AI agent memory layer — vault + palace + temporal knowledge graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Micap AI", email = "info@micap.ai"},
]
keywords = [
    "ai", "agent", "memory", "obsidian", "knowledge-graph",
    "mcp", "claude", "llm", "rag", "semantic-search",
    "langchain", "llamaindex", "nvidia", "nim", "multi-agent"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "black>=23.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "hypothesis>=6.0.0", "bandit>=1.7.0", "pip-audit>=2.0.0"]
semantic = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
llamaindex = [
    "llama-index-core>=0.10.0",
]
nim = [
    "httpx>=0.24.0",
]
tiktoken = [
    "tiktoken>=0.5.0",
]
s3 = [
    "boto3>=1.26.0",
]
faiss = [
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]
all = [
    "ompa[semantic]",
    "ompa[tiktoken]",
]

[project.urls]
Homepage = "https://github.com/jmiaie/ompa"
Repository = "https://github.com/jmiaie/ompa"
Documentation = "https://jmiaie.github.io/ompa"
"Bug Tracker" = "https://github.com/jmiaie/ompa/issues"

[project.scripts]
ao = "ompa.cli:main"
ao-mcp = "ompa.mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ompa*"]
exclude = ["tests*", "agent_memory*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
strict = false
